syntax = "proto3";

package messages;

option go_package = "server-go/src/pb";

import "playerinfo.proto";
import "chat.proto";
import "pathinfo.proto";

message GameMessage {
    oneof message {
        playerinfo.PlayerPosition player_position = 1;
        chat.ChatMessage chat = 2;
    }
}